--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,9 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "react-redux": "^9.0.4",
+    "@reduxjs/toolkit": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
